# ema

./: README.md  pyproject.toml
ema/: main.py
ema/schemas/: request.py  response.py
ema/usecases/: japanese_embedding_service.py
